dnl This is the tinker/bsp/drivers/can configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
AC_INIT(can, [0.1.0])
AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(../../..)

sources_c="sja1000.c can.c"
sources_asm=""
extras=""

AC_PROG_CC
TINKER_CONFIGURE(../../..)
AC_CONFIG_SUBDIRS([])

AC_OUTPUT(Makefile-gnu)
