dnl This is the tinker/bsp/gnu_arm/lpc21xx configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
#AC_INIT(lpc2129_systimer.c)
AC_INIT(lpc21xx, [0.1.0])
dnl AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(../../..)

dnl The following is sadly not working properly. Use autoconf -I <dir> instead to get the aclocal.m4
#AC_CONFIG_MACRO_DIR(../../..)

sources_c="tk_bsp_bitfire.c lpc2129_uart_polled.c lpc2129_vic.c lpc2129_systimer.c"

TINKER_CONFIGURE(../../..)
subdirs=
AC_SUBST(subdirs)

AC_OUTPUT(Makefile-gnu)

