dnl This is the tinker/bsp/gnu_powerpc/CPU/860 configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
#AC_INIT(startup_gnu.s)
AC_INIT(860, [0.1.0])
AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(../../../..)

sources_c="systimer.c isr.c"
sources_asm=""

extras="../../../../lib/crt0.o"
CRT0_OBJECT=exceptions.AO
TINKER_CONFIGURE(../../../..)
subdirs=
AC_SUBST(subdirs)

dnl Update config.h
AC_CONFIG_HEADER(../../../../include/tinker/config.h)

AC_OUTPUT(Makefile-gnu)
